Refine user update API semantics
