# docs/swagger.json
@@ -167,7 +167,7 @@
                 }
             },
             "put": {
-                "description": "Replace user fields by ID.",
+                "description": "Replace all mutable user fields by ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -177,7 +177,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Update user",
+                "summary": "Replace user",
                 "parameters": [
                     {
                         "type": "integer",
@@ -272,7 +272,7 @@
                 }
             },
             "patch": {
-                "description": "Replace user fields by ID.",
+                "description": "Partially update mutable user fields by ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -282,7 +282,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Update user",
+                "summary": "Patch user",
                 "parameters": [
                     {
                         "type": "integer",
@@ -292,12 +292,12 @@
                         "required": true
                     },
                     {
-                        "description": "Update user payload",
+                        "description": "Patch user payload",
                         "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.UpdateUserInput"
+                            "$ref": "#/definitions/httpapi.PatchUserRequest"
                         }
                     }
                 ],
@@ -407,6 +407,31 @@
                 "total": {
                     "type": "integer",
                     "example": 100
+                }
+            }
+        },
+        "httpapi.PatchUserRequest": {
+            "type": "object",
+            "properties": {
+                "birth": {
+                    "type": "string",
+                    "example": "1990-01-01"
+                },
+                "company": {
+                    "type": "string",
+                    "example": "ACME"
+                },
+                "email": {
+                    "type": "string",
+                    "example": "alice@example.com"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Alice"
+                },
+                "used_name": {
+                    "type": "string",
+                    "example": "Ali"
                 }
             }
         },
